--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -283,7 +283,7 @@
         accessToken: mapboxgl.accessToken,
         mapboxgl: mapboxgl,
         flyTo: {
-            maxZoom: 12 // If you want your result not to go further than a specific zoom
+            zoom: 12 // If you want your result not to go further than a specific zoom
           },
         placeholder: 'Search for address or city', // Placeholder text for the search bar
         //bbox: [-122.30937, 37.84214, -122.23715, 37.89838], // Boundary for Berkeley
