Restrictions on unavailable listings

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,7 +10,7 @@
                 <h4><strong>Space Available:</strong> <%= @listing.space%></h4>
                 <h4><strong>Max Duration:</strong> <%= @listing.duration%></h4>
                 <h4><strong>Price per Box/Week:</strong> $<%= '%.2f' % @listing.price%></h4>
-                <% if user_logged_in?%>
+                <% if user_logged_in? && @listing.space > 0 %>
                 <%= link_to "Rent Space", new_request_path(:listing_id => params[:id], :space => @listing.space, :duration => @listing.duration, :price => @listing.price),class:"btn btn-primary"%>
                 <% elsif current_host == @host %>
                 <%= link_to "Delete Listing","/deletelisting/#{@listing.id}",class:"btn btn-danger",method: :delete%>
