--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -145,12 +145,20 @@
                         <tr>
                             <th scope="col">Listing ID</th>
                             <th scope="col">Renter</th>
+                            <th scope="col">Boxes</th>
+                            <th scope="col">Duration</th>
+                            <th scope="col">Price</th>
                         </tr>
                     </thead>
                     <tbody>
                         <% @transactions.each do |t|%>
+                         <tr>
                             <th scope="row"><%= link_to t.listing_id,t.listing%></th>
                             <td><%= t.user.name%></td>
+                            <td><%= t.boxes%></td>
+                            <td><%= t.duration%> weeks</td>
+                            <td>$<%=t.price%></td>
+                         </tr>
                         <%end%>
                     </tbody>
                 </table>
