--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,17 +86,23 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th scope="col">Date Rented</th>
-                                <th scope="col">Host Name</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% @transactions.each do |t|%>
-                                <tr>
-                                    <td><%= t.created_at%></td>
-                                    <td><%= link_to t.host.name, t.host%></td>
+                                    <th scope="col">Listing ID</th>
+                                    <th scope="col">Host</th>
+                                    <th scope="col">Boxes</th>
+                                    <th scope="col">Duration</th>
+                                    <th scope="col">Price</th>
                                 </tr>
-                            <%end%>
+                            </thead>
+                            <tbody>
+                                <% @transactions.each do |t|%>
+                                 <tr>
+                                    <th scope="row"><%= link_to t.listing_id,t.listing%></th>
+                                    <td><%= t.host.name%></td>
+                                    <td><%= t.boxes%></td>
+                                    <td><%= t.duration%> weeks</td>
+                                    <td>$<%=t.price%></td>
+                                 </tr>
+                                <%end%>
                         </tbody>
                     </table>
                 </div>
