--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -163,7 +163,7 @@
               <div class="card-body">
               <h4 class="d-flex align-items-center mb-3"> <%= bootstrap_icon("bell")%> Notifications <span class="badge"><%= @notifications.unread.length%></span></h4>
                 <% @notifications.unread.each do |n|%>
-                    <p><%= link_to n.to_notification.message,n.to_notification.url%></p>
+                    <p><%= link_to n.to_notification.message,"/read/#{n}",method: :patch%></p>
                 <%end%>
               </div>
             </div>
