--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -39,8 +39,8 @@
                                 <td><%= link_to r.listing_id, r.listing%></td>
                                 <td><%= link_to r.user.name, r.user%></td>
                                 <td>
-                                    <%= link_to "Accept","/accept/#{r.id}",class:"btn btn-success", method: :delete%>
-                                    <%= link_to "Deny", "/deny/#{r.id}",class:"btn btn-danger", method: :delete%>
+                                    <%= link_to bootstrap_icon("patch-check-fill",fill:"green",width:25,height:25),"/accept/#{r.id}", method: :delete%>
+                                    <%= link_to bootstrap_icon("x-circle-fill",fill:"red",width:25,height:25), "/deny/#{r.id}", method: :delete%>
                                 </td>
                             </tr>
                         <%end%>
