--- a/app/views/user_mailer/request_decision.html.erb
+++ b/app/views/user_mailer/request_decision.html.erb
@@ -2,11 +2,21 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     </head>
-    <div class="container">
-        <p>Dear <%= @user.name%></p>
-        <p>This is confirmation that you requested a to rent a space at: <strong><%= @request.host.address%></strong></p>
 
-        <div class="card w-50">
+    <body>
+        <div class="container">
+            <p>Dear <%= @user.name%></p>
+            
+            <% if @dec == "accept"%>
+                 <p>Your request to rent a space at <%= @request.host.address%> was <span class="text-success">accepted</span></p>
+                 <p>Please contact your <%= link_to "host",@request.host%> to coordinate</p>
+
+            <%else%>
+                <p>Your request to rent a space at <%= @request.host.address%> was <span class="text-danger">denied</span></p>
+                <p>We encourage you to keep looking for storage spaces <%= link_to "here",'/listings'%></p>
+            <%end%>
+
+             <div class="card w-50">
             <div class="card-body">
                 <h5 class="card-title">Request Details</h5>
                 <table class="table">
@@ -29,8 +39,8 @@
                 </table>
             </div>
         </div>
-
-        <p>We will alert you with updates</p>
-    </div>
-    
+        <p><strong>Thank you for using AirStorage!</strong></p>
+        </div>
+        
+    </body>
 </html>
