Background Image on Home

--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -8,13 +8,9 @@
 })
 </script>
 
-<style>
-body {
-    background-image: url("assets/airstorage_homebkg.png");
-    background-size: cover
-}
-</style>
+<body class="home-page">
 
+</body>
 <div class="home">
   <div class="center jumbotron", id="homepage">
   <h1>Welcome to AirStorage</h1>
