--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .home-page {
-    background-image: image-url("/assets/airstorage_homebkg.png");
+    background-image: image-url("airstorage_homebkg.png");
     background-size: cover
 }
