--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -7,6 +7,8 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
+    <link href='https://api.mapbox.com/mapbox-assembly/v0.24.0/assembly.min.css' rel='stylesheet'>
+    <script src='https://api.mapbox.com/mapbox-assembly/v0.24.0/assembly.js'></script>
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js"></script>
     <link
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css"
@@ -50,6 +52,12 @@
         width: 66.6666%;
         top: 50px;
         bottom: 0px;
+      }
+
+      .select-container {
+        margin-left: 33px;
+        margin-top: 5px;
+        margin-bottom: 5px;
       }
 
       h1 {
@@ -242,9 +250,98 @@
       <div class="heading">
         <h1>Listings</h1>
       </div>
+      <div id="filterResults" class="btn" style="margin-left:350px">Filter</div>
       <div id="listings" class="listings"></div>
     </div>
     <div id="map" class="map"></div>
+
+     <div id='filtersPopUp'
+            class='absolute top right bottom left scroll-auto hide-visually flex-parent flex-parent--center-main mt120-ml'>
+            <div class='pt36'>
+                <div class='flex-child bg-white round relative scroll-auto'>
+                    <button id='exitButton' class='absolute top right px12 py12'>
+                        <svg class='icon link color-darken50'>
+                            <use xlink:href='#icon-close'></use>
+                        </svg>
+                    </button>
+                    <div class='px24 py24'>
+                        <form id="filters">
+                          <div>
+                            <h3 class="txt-bold">Duration (weeks): </h3>
+                            <div class = "select-container center">
+                              <select id="duration-filter" onchange="filterAll()" class="select filter-option">
+                                <option value="0"></option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div>
+                            <h3 class="txt-bold">Number of Boxes: </h3>
+                            <div class = "select-container center">
+                              <select id="box-filter" onchange="filterAll()" class="select filter-option">
+                                <option value="0"></option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div>
+                            <h3 class="txt-bold">Filter by Price ($)</h3>
+                            <div class = "select-container center">
+                              <select id="price-filter" onchange="filterAll()" class="select filter-option">
+                                <option value="0"></option>
+                                <option value="5">5</option>
+                                <option value="10">10</option>
+                                <option value="15">15</option>
+                                <option value="20">20</option>
+                                <option value="25">25</option>
+                                <option value="30">30</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div>
+                            <h3 class="txt-bold">Distance (miles)</h3>
+                            <div class = "select-container center">
+                              <select id="distance-filter" class="select filter-option">
+                                <option value="0"></option>
+                                <option value="5">5</option>
+                                <option value="10">10</option>
+                                <option value="15">15</option>
+                                <option value="20">20</option>
+                                <option value="25">25</option>
+                                <option value="30">30</option>
+                              </select>
+                            </div>
+                          </div>
+                        </form>
+                        <div class='align-center py12'></div>
+                        <div class="flex-parent flex-parent--center-main">
+                            <button id="resetFilters" class="btn">Reset Filters</button>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    
     <script>
       /* This will let you use the .remove() function later on */
       if (!('remove' in Element.prototype)) {
@@ -269,7 +366,7 @@
         zoom: 13,
       });
         
-        var listings = $('.listings').data('listings');
+      var listings = $('.listings').data('listings');
 
       /**
        * Assign a unique id to each store. You'll use this `id`
@@ -292,6 +389,7 @@
         latitude: latitude
         },
         });
+    
     map.addControl(geocoder);
 
       /**
@@ -332,7 +430,7 @@
         });
         
         buildLocationList(listings);
-        addMarkers();
+        addMarkers(listings);
       });
 
     geocoder.on('result', function(ev) {
@@ -368,9 +466,9 @@
       /**
        * Add a marker to the map for every store listing.
        **/
-      function addMarkers() {
+      function addMarkers(new_listings) {
         /* For each feature in the GeoJSON object above: */
-        listings.features.forEach(function (marker) {
+        new_listings.features.forEach(function (marker) {
           /* Create a div element for the marker. */
           var el = document.createElement('div');
           /* Assign a unique `id` to the marker. */
@@ -538,6 +636,70 @@
           )
           .addTo(map);
       }
+
+      const filterResults = document.getElementById("filterResults");
+      const filtersPopUp = document.getElementById("filtersPopUp");
+      filterResults.addEventListener("click", () => {
+        filtersPopUp.classList.remove("hide-visually");
+        filtersPopUp.classList.add("z5");
+      });
+
+      exitButton.addEventListener("click", () => {
+        filtersPopUp.classList.add("hide-visually");
+      });
+
+
+      filteredListings = JSON.parse(JSON.stringify(listings))
+
+      function filterByDuration(value, fListings) {
+        if (value > 0) {
+          for (var key in fListings.features) {
+            if (fListings.features[key].properties.duration > value) {
+              delete fListings.features[key];
+            }
+          }
+        }
+      }
+
+      function filterByBoxSize(value, fListings) {
+        if (value > 0) {
+          for (var key in fListings.features) {
+            if (fListings.features[key].properties.space > value) {
+              delete fListings.features[key]
+            }
+          }
+        }
+      }
+
+      function filterByPrice(value, fListings) {
+        if (value > 0) {
+          for (var key in fListings.features) {
+            if (fListings.features[key].properties.price > value) {
+              //alert(listings.features[key].properties.city) 
+              delete fListings.features[key]
+            }
+          }
+        }
+      }
+
+      function filterAll() {
+        filteredListings = JSON.parse(JSON.stringify(listings))
+        filterByDuration($("#duration-filter").val(), filteredListings)
+        filterByBoxSize($("#box-filter").val(), filteredListings)
+        filterByPrice($("#price-filter").val(), filteredListings)
+        $("#listings").empty()
+        buildLocationList(filteredListings)
+        $(".marker").remove()
+        addMarkers(filteredListings)
+      }
+
+      resetFilters.addEventListener("click", () => {
+        $("#duration-filter").val(0)
+        $("#box-filter").val(0)
+        $("#price-filter").val(0)
+        $("#listings").empty();
+        buildLocationList(listings)
+      });
     </script>
   </body>
 </html>
