admin accounts, admin page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,10 +2,9 @@
   <small>
     AirStorage by Team11
   </small>
-  <nav>
+  <nav >
     <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
+      <li class="bg-primary"><%= link_to "Admin Login","/adminlogin"%></li>
     </ul>
   </nav>
 </footer>
