--- a/app/views/admins/new_request.html.erb
+++ b/app/views/admins/new_request.html.erb
@@ -11,12 +11,12 @@
             <%= f.label :listing_id%>
             <%= f.hidden_field :listing_id, value: params[:listing_id]%>
             <%= f.label :user%>
-            <%= f.select :user,@user_names,{:style => "min-width: 100px;"}, class:"form-control"%>
+            <%= f.select :user,User.all,{:style => "min-width: 100px;"}, class:"form-control"%>
             <%= f.label :boxes%>
-            <%= f.select :boxes,num_box_array(params[:space].to_i), {:style => "min-width: 100px;"}, class:"form-control"%>
+            <%= f.select :boxes,num_box_array(25), {:style => "min-width: 100px;"}, class:"form-control"%>
 
             <%= f.label :duration, "Duration (in weeks)"%>
-            <%= f.select :duration,num_weeks_array(params[:duration].to_i), {:style => "min-width: 100px;"}, class:"form-control"%>
+            <%= f.select :duration,num_weeks_array(52), {:style => "min-width: 100px;"}, class:"form-control"%>
         
             <%= f.submit "Create Request", class:"btn btn-primary"%>
         <%end%>
