--- a/app/views/password_resets/host_edit.html.erb
+++ b/app/views/password_resets/host_edit.html.erb
@@ -3,11 +3,11 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(url: resetpassword_path, local: true, method: :post) do |f| %>
+    <%= form_with(url: host_resetpassword_path, local: true, method: :post) do |f| %>
       <%= render 'shared/error_messages' %>
 
-      <%= hidden_field_tag :id, @user.id %>
-      <%= hidden_field_tag :email, @user.email %>
+      <%= hidden_field_tag :id, @host.id %>
+      <%= hidden_field_tag :email, @host.email %>
 
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
