--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -23,7 +23,7 @@
                 <h5><%= bootstrap_icon("box")%> Max Storage <%= @listing.space%> Boxes</h5>
                 <h4><strong>Price per Box/Week:</strong> $<%= '%.2f' % @listing.price%></h4>
                 <% if user_logged_in?%>
-                    <%= link_to "Rent Space", new_request_path(:listing_id => params[:id], :space => @listing.space, :duration => @listing.duration),class:"btn btn-primary"%>
+                    <%= link_to "Rent Space", new_request_path(:listing_id => params[:id], :space => @listing.space, :duration => @listing.duration , :price => @listing.price),class:"btn btn-primary"%>
                 <% elsif current_host == @host %>
                     <%= link_to "Delete Listing","/deletelisting/#{@listing.id}",class:"btn btn-danger",method: :delete%>
                     <h4>Pending Requests</h4>
