Fixed filters in listings map

--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -23,7 +23,7 @@
   </div>
     <div class="col text-center">
       <% if user_logged_in? %>
-        <%= link_to "Find storage near me", search_page_path(:search_filter => 'location'), class: "btn btn-lg btn-primary" %>
+        <%= link_to "Find storage near me", listings_path, class: "btn btn-lg btn-primary" %>
       <% elsif host_logged_in? %>
         <%= link_to "Start to rent my space", "/listings/new", class: "btn btn-lg btn-primary" %>
       <% else %>
