--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -7,6 +7,8 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
+    <link href='https://api.mapbox.com/mapbox-assembly/v0.24.0/assembly.min.css' rel='stylesheet'>
+    <script src='https://api.mapbox.com/mapbox-assembly/v0.24.0/assembly.js'></script>
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js"></script>
     <link
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css"
@@ -18,6 +20,7 @@
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css" type="text/css">
     <!-- Turf.js plugin -->
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+    
 
     <style>
       body {
@@ -50,6 +53,12 @@
         width: 66.6666%;
         top: 50px;
         bottom: 0px;
+      }
+
+      .select-container {
+        margin-left: 33px;
+        margin-top: 5px;
+        margin-bottom: 5px;
       }
 
       h1 {
@@ -242,9 +251,116 @@
       <div class="heading">
         <h1>Listings</h1>
       </div>
+      <div id="filterResults" class="btn" style="margin-left:350px">Filter</div>
       <div id="listings" class="listings"></div>
     </div>
     <div id="map" class="map"></div>
+     <div id='filtersPopUp'
+            class='absolute top right bottom left scroll-auto hide-visually flex-parent flex-parent--center-main mt120-ml'>
+            <div class='pt36'>
+                <div class='flex-child bg-white round relative scroll-auto'>
+                    <button id='exitButton' class='absolute top right px12 py12'>
+                        <svg class='icon link color-darken50'>
+                            <use xlink:href='#icon-close'></use>
+                        </svg>
+                    </button>
+                    <div class='px24 py24'>
+                        <form id="filters">
+                          <div>
+                            <h3 class="txt-bold">Duration (weeks): </h3>
+                            <div class = "select-container center">
+                              <select id="duration-filter" class="select filter-option">
+                                <option value="2">2 Weeks</option>
+                                <option value="4">4 Weeks</option>
+                                <option value="6">6 Weeks</option>
+                                <option value="8">8 Weeks</option>
+                                <option value="10">10 Weeks</option>
+                                <option value="12">12 Weeks</option>
+                                <option value="14">14 Weeks</option>
+                                <option value="16">16 Weeks</option>
+                                <option value="18">18 Weeks</option>
+                                <option value="20">20 Weeks</option>
+                                <option value="22">22 Weeks</option>
+                                <option value="24">24 Weeks</option>
+                                <option value="26">26 Weeks</option>
+                                <option value="28">28 Weeks</option>
+                                <option value="30">30 Weeks</option>
+                                <option value="32">32 Weeks</option>
+                                <option value="34">34 Weeks</option>
+                                <option value="36">36 Weeks</option>
+                                <option value="38">38 Weeks</option>
+                                <option value="40">40 Weeks</option>
+                                <option value="42">42 Weeks</option>
+                                <option value="44">44 Weeks</option>
+                                <option value="46">46 Weeks</option>
+                                <option value="48">48 Weeks</option>
+                                <option value="50">50 Weeks</option>
+                                <option value="52">52 Weeks</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div>
+                            <h3 class="txt-bold">Number of Boxes: </h3>
+                            <div class = "select-container center">
+                              <select id="box-filter" class="select filter-option">
+                                <option value="1">1 Box</option>
+                                <option value="2">2 Boxes</option>
+                                <option value="3">3 Boxes</option>
+                                <option value="4">4 Boxes</option>
+                                <option value="5">5 Boxes</option>
+                                <option value="6">6 Boxes</option>
+                                <option value="7">7 Boxes</option>
+                                <option value="8">8 Boxes</option>
+                                <option value="9">9 Boxes</option>
+                                <option value="10">10 Boxes</option>
+                                <option value="11">11 Boxes</option>
+                                <option value="12">12 Boxes</option>
+                                <option value="13">13 Boxes</option>
+                                <option value="14">14 Boxes</option>
+                                <option value="15">15 Boxes</option>
+                                <option value="16">16 Boxes</option>
+                                <option value="17">17 Boxes</option>
+                                <option value="18">18 Boxes</option>
+                                <option value="19">19 Boxes</option>
+                                <option value="20">20 Boxes</option>
+                                <option value="21">21 Boxes</option>
+                                <option value="22">22 Boxes</option>
+                                <option value="23">23 Boxes</option>
+                                <option value="24">24 Boxes</option>
+                                <option value="25">25 Boxes</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div>
+                            <h3 class="txt-bold">Max Price/Box ($)</h3>
+                            <div class = "select-container center">
+                              <input type="number" id="price-filter" value="5.00" step = '0.01' min= '0' oninput="validity.valid||(value='');" class="select filter-option">
+                            </div>
+                          </div>
+                          <div>
+                            <h3 class="txt-bold">Distance (miles)</h3>
+                            <div class = "select-container center">
+                              <input type="number" id="distance-filter" value="10"  min= '0' oninput="validity.valid||(value='');" class="select filter-option">
+                              
+                            </div>
+                          </div>
+                        </form>
+                        <div class='align-center py12'></div>
+                        <div class="flex-parent flex-parent--center-main">
+                            <button  id="applyFilters" class="btn">Apply Filters</button>
+                            <button style="background-color:red" id="resetFilters" class="btn">Reset Filters</button>
+                        </div>
+
+                    </div>
+                  
+
+                </div>
+            </div>
+        </div>
+    
+     
+    
+    
     <script>
       /* This will let you use the .remove() function later on */
       if (!('remove' in Element.prototype)) {
@@ -269,7 +385,7 @@
         zoom: 13,
       });
         
-        var listings = $('.listings').data('listings');
+      var listings = $('.listings').data('listings');
 
       /**
        * Assign a unique id to each store. You'll use this `id`
@@ -292,6 +408,7 @@
         latitude: latitude
         },
         });
+    
     map.addControl(geocoder);
 
       /**
@@ -332,7 +449,7 @@
         });
         
         buildLocationList(listings);
-        addMarkers();
+        addMarkers(listings);
       });
 
     geocoder.on('result', function(ev) {
@@ -368,9 +485,9 @@
       /**
        * Add a marker to the map for every store listing.
        **/
-      function addMarkers() {
+      function addMarkers(new_listings) {
         /* For each feature in the GeoJSON object above: */
-        listings.features.forEach(function (marker) {
+        new_listings.features.forEach(function (marker) {
           /* Create a div element for the marker. */
           var el = document.createElement('div');
           /* Assign a unique `id` to the marker. */
@@ -538,6 +655,70 @@
           )
           .addTo(map);
       }
+
+      const filterResults = document.getElementById("filterResults");
+      const filtersPopUp = document.getElementById("filtersPopUp");
+      filterResults.addEventListener("click", () => {
+        filtersPopUp.classList.remove("hide-visually");
+        filtersPopUp.classList.add("z5");
+      });
+
+      exitButton.addEventListener("click", () => {
+        filtersPopUp.classList.add("hide-visually");
+      });
+
+      function filter(dur, space, price, distance, listing) {
+        return (dur > listing.duration || space > listing.space
+            || price < listing.price || distance < listing.distance )
+      }
+
+      function filterAll() {
+        var listings_list = document.getElementById('listings');
+        while (listings_list.firstChild) {
+          listings_list.removeChild(listings_list.firstChild);
+        }
+        
+        buildLocationList(listings);
+        listings_list = document.getElementById('listings');
+        var i = 0;
+        for(var child=listings_list.firstChild; child!==null; child=child.nextSibling) {
+            var marker_child = document.getElementById('marker-' + listings.features[i].properties.id);
+            marker_child.style.visibility = "visible";
+            var filter_bool = filter($("#duration-filter").val(), $("#box-filter").val(),
+            $("#price-filter").val(), $("#distance-filter").val(), listings.features[i].properties);
+            if (filter_bool){
+              listings_list.removeChild(child);
+              marker_child.style.visibility = "hidden";
+            }
+            i = i+ 1;
+        }
+      }
+
+      resetFilters.addEventListener("click", () => {
+        $("#duration-filter").val(1)
+        $("#box-filter").val(1)
+        $("#price-filter").val(5.00)
+        $("#distance-filter").val(10)
+        $("#listings").empty();
+        //buildLocationList(listings)
+        var listings_list = document.getElementById('listings');
+        while (listings_list.firstChild) {
+          listings_list.removeChild(listings_list.firstChild);
+        }
+        
+        buildLocationList(listings);
+        listings_list = document.getElementById('listings');
+        var marker_child = document.getElementById('marker-' + listings.features[0].properties.id);
+        var i = 0;
+        for(var child=listings_list.firstChild; child!==null; child=child.nextSibling) {
+            marker_child.style.visibility = "visible";
+            i = i+ 1;
+          marker_child = document.getElementById('marker-' + listings.features[i].properties.id);
+        }
+      });
+      applyFilters.addEventListener("click", () => {
+       filterAll()
+      });
     </script>
   </body>
 </html>
